<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="1dp"
        android:layout_marginRight="1dp"
        android:backgroundTint="@color/picton_blue"
        android:drawableLeft="@drawable/calendar_icon"
        android:text="Calendar View"
        android:textAllCaps="false"
        android:textColor="@color/white">
    </Button>

    <Button
        android:id="@+id/button_main_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="1dp"
        android:backgroundTint="@color/light_purple"
        android:drawableLeft="@drawable/user_main_icon"
        android:text="User"
        android:textAllCaps="false"
        android:visibility="gone"
        android:textColor="@color/white">

    </Button>

    <Button
        android:id="@+id/button_main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:backgroundTint="@color/very_light_gray"
        android:drawableLeft="@drawable/user_main_icon"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="visible"></Button>

    <Spinner
        android:id="@+id/sort_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/swipeRefreshLayout"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="1dp"
        android:spinnerMode="dropdown"


        />

    <TextView
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        tools:text="Task Name here"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/taskDaysLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="16dp"
        tools:text="Deadline countdown"
        android:textColor="@color/black"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tasksText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="16dp"
        android:text="Upcoming Tasks"
        android:textColor="@android:color/black"
        android:textSize="28dp"
        android:textStyle="bold" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksText">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tasksText"
            android:nestedScrollingEnabled="true"
            app:fastScrollEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"

        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_blue_bright"
        android:src="@drawable/ic_baseline_add" />

    <ImageView
        android:id="@+id/noTaskImage"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_below="@id/tasksText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/chill5"
        android:visibility="gone" />


</RelativeLayout>
