<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/layout_login"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deadline Tracker"
        android:textSize="48dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />
    <ImageView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_icon"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="Phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_phone_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            android:hint="Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Login"
            />
        <TextView
            android:id="@+id/toCreateAc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_createAc"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textAlignment="center"
            android:layout_gravity="center"/>



    </LinearLayout>
    <TextView
        android:id="@+id/noLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_continue"
        android:textColor="@color/gray"
        android:textSize="16dp"
        android:textAlignment="center"
        android:layout_gravity="center"

        />
</LinearLayout>